update dockerfile and entry